Fix: image height on IE

--- a/src/scss/modules/photo.scss
+++ b/src/scss/modules/photo.scss
@@ -25,6 +25,7 @@
 
     img {
         max-height: 80vh;
+        flex: none;
     }
 
     // alignment rules
